<resources>
    <string name="app_name">app</string>
    <string name="personal_access_token">personal_access_token</string>
    <string name="login">Login</string>
    <string name="user_preferences">bitrise_b_prefs</string>
    <string name="title_activity_build">BuildActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rebuild">rebuild</string>
    <string name="abort">abort</string>
    <string name="started_on_worker_at">Started on worker at:</string>
    <string name="finished_at">Finished at:</string>
    <string name="build_tags">Build tags:</string>
    <string name="start_build">Start Build</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workflow">workflow</string>
    <string name="message">Message</string>
    <string name="no_commit_message">No commit message</string>
</resources>